--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -66,9 +66,9 @@ CFLAGS+=-g
 #
 # Encryption keys
 #
-CFLAGS+=-D AES_KEY={AES_KEY}
-#CFLAGS+=-D RSA_KEY={RSA_KEY} # to be implemented later
-#CFLAGS+=-D RSA_N={RSA_N}
+CFLAGS+=-D AES_KEY=${AES_KEY}
+# CFLAGS+=-D RSA_KEY=${RSA_KEY} # to be implemented later
+# CFLAGS+=-D RSA_N=${RSA_N}
 
 #
 # Where to find header files that do not live in this directory.
