Add RSA_N/E, fix unit testing

--- a/bootloader/Makefile
+++ b/bootloader/Makefile
@@ -67,8 +67,8 @@ CFLAGS+=-g
 # Encryption keys
 #
 CFLAGS+=-D AES_KEY=${AES_KEY}
-# CFLAGS+=-D RSA_KEY=${RSA_KEY} # to be implemented later
-# CFLAGS+=-D RSA_N=${RSA_N}
+CFLAGS+=-D RSA_N=${RSA_N}
+CFLAGS+=-D RSA_E=${RSA_E}
 
 #
 # Where to find header files that do not live in this directory.
